include/lowlat.h

typedef enum lowlat_status lowlat_status;
typedef int32_t lowlat_status;
typedef struct lowlat lowlat;
typedef void (*lowlat_log_fn)(uint32_t level, const char *message, void *opaque);
typedef struct lowlat_create_info {
    uint32_t size;
} lowlat_create_info;
typedef struct lowlat_host_config {
    uint32_t size;
    uint16_t base_port;
    uint16_t reserved;
    uint32_t max_guests;
    uint32_t codec;
    uint32_t encoder;
    uint32_t cg_level;
    uint32_t quality;
    uint32_t exclusive_hold_ms;
    bool exclusive_pointer;
    uint8_t reserved2[3];
    uint32_t server_count;
    char servers[LOWLAT_SERVERS_MAX][LOWLAT_SERVER_MAX];
    struct lowlat_host_video_config video;
    struct lowlat_host_audio_config audio;
} lowlat_host_config;
typedef struct lowlat_permissions {
    bool keyboard;
    bool pointer;
    bool gamepad;
    uint8_t reserved;
} lowlat_permissions;
typedef struct lowlat_attempt_info {
    uint32_t size;
    uint32_t reserved;
    char attempt_id[LOWLAT_ATTEMPT_MAX];
    char ufrag[LOWLAT_ICE_MAX];
    char pwd[LOWLAT_ICE_MAX];
    char aes256[LOWLAT_ICE_MAX];
    struct lowlat_permissions permissions;
    bool owner;
    uint8_t reserved2[3];
} lowlat_attempt_info;
typedef struct lowlat_candidate {
    uint32_t size;
    uint16_t port;
    bool sync;
    bool reflexive;
    bool lan;
    char address[LOWLAT_ADDRESS_MAX];
} lowlat_candidate;
typedef struct lowlat_credentials {
    uint32_t size;
    uint16_t port;
    uint16_t reserved;
    char ufrag[LOWLAT_ICE_MAX];
    char pwd[LOWLAT_ICE_MAX];
    char fingerprint[LOWLAT_FINGERPRINT_MAX];
    char aes256[LOWLAT_ICE_MAX];
} lowlat_credentials;
typedef struct lowlat_guest {
    uint32_t number;
    struct lowlat_permissions permissions;
    bool owner;
    uint8_t reserved[3];
    char attempt[LOWLAT_ATTEMPT_MAX];
} lowlat_guest;
typedef struct lowlat_output {
    char id[LOWLAT_OUTPUT_MAX];
    char name[LOWLAT_OUTPUT_MAX];
    uint32_t width;
    uint32_t height;
    uint32_t x;
    uint32_t y;
} lowlat_output;
typedef struct lowlat_host_status {
    uint32_t size;
    uint32_t guests;
    uint32_t width;
    uint32_t height;
    bool running;
    bool audio_active;
    uint8_t reserved[2];
    char audio_device[LOWLAT_OUTPUT_MAX];
} lowlat_host_status;
typedef struct lowlat_event {
    lowlat_event_type kind;
    uint32_t dropped;
    union lowlat_event_body body;
} lowlat_event;
uint32_t lowlat_abi_version(void);
const char *lowlat_status_string(int32_t status);
lowlat_status lowlat_set_log_callback(lowlat_log_fn fn_, void *opaque);
lowlat_status lowlat_set_log_level(uint32_t level);
lowlat_status lowlat_create(const struct lowlat_create_info *info, struct lowlat **out);
void lowlat_destroy(struct lowlat *ll);
lowlat_status lowlat_host_start(struct lowlat *ll,
                                const struct lowlat_host_config *cfg);
lowlat_status lowlat_host_new_attempt(struct lowlat *ll,
                                      const struct lowlat_attempt_info *info);
void lowlat_host_add_candidate(struct lowlat *ll,
                               const char *attempt_id,
                               const struct lowlat_candidate *cand);
lowlat_status lowlat_host_begin_p2p(struct lowlat *ll,
                                    const char *attempt_id,
                                    uint16_t port,
                                    struct lowlat_credentials *out);
void lowlat_host_end_connection(struct lowlat *ll, const char *attempt_id);
lowlat_status lowlat_host_get_guests(struct lowlat *ll,
                                     struct lowlat_guest *out,
                                     uint32_t *count);
lowlat_status lowlat_host_send_user_data(struct lowlat *ll,
                                         uint32_t guest_id,
                                         uint32_t id,
                                         const void *data,
                                         uint32_t len);
lowlat_status lowlat_host_kick_guest(struct lowlat *ll,
                                     uint32_t guest_id,
                                     int32_t reason);
lowlat_status lowlat_host_set_permissions(struct lowlat *ll,
                                          uint32_t guest_id,
                                          const struct lowlat_permissions *perms);
lowlat_status lowlat_get_outputs(struct lowlat_output *out, uint32_t *count);
lowlat_status lowlat_can_host(void);
lowlat_status lowlat_host_get_status(struct lowlat *ll, struct lowlat_host_status *out);
lowlat_status lowlat_host_stop(struct lowlat *ll);
lowlat_status lowlat_host_poll_events(struct lowlat *ll,
                                      uint32_t timeout_ms,
                                      struct lowlat_event *out,
                                      void *body,
                                      uint32_t *body_len);